--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -1,2 +1,5 @@
 <!--pages/about/about.wxml-->
 <text>pages/about/about.wxml</text>
+
+<view>{{ms}}</view>
+<button size="mini" bindtap="click">按钮</button>
