--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,3 +1,20 @@
 <!--pages/home/home.wxml-->
-<text class="title">hello world</text>
-<button size="mini">按钮</button>
+<!-- 1 小程序的数据绑定 -->
+<view>hello {{name}}</view>
+<view>我的年龄：{{age}} </view>
+
+<!-- 2 列表展示 wx:for-->
+<view>{{student[0].name}}</view>
+<view wx:for="{{student}}">{{item.name}}-{{item.age}}</view>
+
+<!-- 3 事件监听改变data  -->
+<view>当前计数：{{c}}</view>
+<button size="mini" bindtap="handleBtnClick">+</button>
+<button size="mini" bindtap="handleSubtraction">-</button>
+
+<!-- 2获取用户信息方式 -->
+<button size="mini"  open-type="getUserInfo" 
+bindgetuserinfo="handclick" >获取授权</button>
+<!-- 3展示用户信息方式 -->
+<open-data type="userNickName"></open-data>
+<open-data type="userAvatarUrl"></open-data>
